# zunigram

./: .gitignore  Cargo.toml  README.md  requirements-dev.txt
cli/: __init__.py  setup.sh  zunigram_cli.py
cli/commands/: __init__.py  detect.py  generate.py  prove.py  verify.py
crates/air/: Cargo.toml
crates/air/src/: lib.rs  preprocessed.rs
crates/air/src/prf/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/unigram/: component.rs  mod.rs  table.rs  witness.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  types.rs
crates/prover/: Cargo.toml
crates/prover/examples/: demo.rs  prove_from_json.rs
crates/prover/src/: lib.rs
crates/prover/tests/: tests.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs
crates/zunigram-py/: Cargo.toml  README.md  pyproject.toml
crates/zunigram-py/python/zunigram_py/: __init__.py  __init__.pyi
crates/zunigram-py/src/: lib.rs
llm/: __init__.py  config.py  detect.py  generate.py  prover.py  requirements.txt  utils.py  watermark.py
tests/: conftest.py  test_e2e.py
