[package]
name = "air"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIR components for unigram watermark detection"


[dependencies]
common = { workspace = true }
stwo = { workspace = true }
stwo-constraint-framework = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
tracing-subscriber = { workspace = true }

