[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common types and utilities for Zunigram unigram watermark detection"

[dependencies]
stwo = { workspace = true }
stwo-constraint-framework = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

