[package]
name = "prover"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prover for unigram watermark detection proofs"

[dependencies]
air = { workspace = true }
common = { workspace = true }
stwo = { workspace = true }
stwo-constraint-framework = { workspace = true }
rayon = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
verifier = { workspace = true }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "prove_from_json"
path = "examples/prove_from_json.rs"

