[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "zunigram_py"
version = "0.1.0"
description = "Python bindings for zunigram Poseidon2 PRF"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["watermark", "llm", "stark", "poseidon2", "zkp"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "zunigram_py"

